tests/e2e-chainsaw/v1beta2/acl-pvc/redis-standalone/acl-pvc.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: redis-standalone-acl-pvc
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 100Mi
  # storageClassName: standard
