tests/e2e-chainsaw/v1beta2/acl-pvc/redis-standalone/ready-standalone.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-standalone-acl-pvc
  labels:
    app: redis-standalone-acl-pvc
    redis_setup_type: standalone
    role: standalone
status:
  replicas: 1
  readyReplicas: 1
